--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,13 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
+    "react-time-picker": "^6.6.0",
     "redux-persist": "^6.0.0",
     "tailwind-scrollbar": "^3.1.0"
   },
