--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
@@ -24,6 +26,7 @@
     "react-select": "^5.8.0",
     "react-time-picker": "^6.6.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
