--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node api/index.js"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.0.10",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
@@ -15,6 +16,7 @@
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
+    "stripe": "^14.21.0",
     "uuid": "^9.0.1"
   }
 }
