--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.0.14",
     "html-to-text": "^9.0.5",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
