--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-time-picker": "^6.6.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.2",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.4",
